# collibra-python-connector

./: LICENSE  README.md
collibra_connector/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  example_usage.py  pyproject.toml
collibra_connector/collibra_connector/: __init__.py  async_connector.py  cli.py  connector.py  helpers.py  lineage.py  models.py  telemetry.py  testing.py
collibra_connector/collibra_connector/api/: Activity.py  Asset.py  Attribute.py  Base.py  Comment.py  Community.py  Domain.py  Exceptions.py  Metadata.py  OutputModule.py  Relation.py  Responsibility.py  Search.py  User.py  UserGroup.py  Utils.py  Workflow.py  __init__.py
collibra_connector/tests/: __init__.py  test_asset.py  test_connector.py  test_exceptions.py  test_helpers.py  test_lineage.py  test_models.py  test_search.py  test_testing.py
collibra_python_connector/: pyproject.toml
collibra_python_connector/connector/: __init__.py  connector.py
