[project]
name = "collibra-connector"
version = "1.0.20"
authors = [
  { name="Raül Dalgamonni", email="rauldalgamonnialonso@gmail.com"},
]
description = "An UNOFFICIAL standard Python connector for the Collibra Data Governance Center API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/rauldaal/collibra-python-connector"
"Bug Tracker" = "https://github.com/rauldaal/collibra-python-connector"
Documentation = "https://github.com/rauldaal/collibra-python-connector#readme"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["collibra_connector", "collibra_connector.api"]

[tool.setuptools.package-data]
collibra_connector = ["py.typed"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4"]
ignore = ["E501"]
