[project]
name = "collibra-connector"
version = "1.1.1"
authors = [
  { name="Raul Dalgamonni", email="rauldalgamonnialonso@gmail.com"},
]
description = "An UNOFFICIAL standard Python connector for the Collibra Data Governance Center API with full type safety, async support, and enterprise features."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Typing :: Typed",
    "Framework :: Pydantic :: 2",
    "Development Status :: 5 - Production/Stable",
]
keywords = [
    "collibra",
    "data-governance",
    "data-catalog",
    "api-client",
    "data-lineage",
    "metadata-management",
]
dependencies = [
    "requests>=2.20.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# Async support with httpx
async = [
    "httpx>=0.25.0",
]
# CLI support
cli = [
    "click>=8.0.0",
    "pandas>=1.3.0",
]
# OpenTelemetry observability
telemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
# DataFrame export
pandas = [
    "pandas>=1.3.0",
]
# All extras
all = [
    "httpx>=0.25.0",
    "click>=8.0.0",
    "pandas>=1.3.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
    "ruff>=0.1.0",
    "httpx>=0.25.0",
    "click>=8.0.0",
    "pandas>=1.3.0",
]

[project.scripts]
collibra-sdk = "collibra_connector.cli:main"

[project.urls]
Homepage = "https://github.com/rauldaal/collibra-python-connector"
"Bug Tracker" = "https://github.com/rauldaal/collibra-python-connector/issues"
Documentation = "https://github.com/rauldaal/collibra-python-connector#readme"
Changelog = "https://github.com/rauldaal/collibra-python-connector/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["collibra_connector", "collibra_connector.api"]

[tool.setuptools.package-data]
collibra_connector = ["py.typed"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4"]
ignore = ["E501"]

[tool.coverage.run]
source = ["collibra_connector"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
